--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "anydo",
   "version": "0.1.0",
-  "description": "Unofficial Anydo client for Node.js.",
+  "description": "Unofficial Any.do client for Node.js.",
   "main": "index.js",
   "scripts": {
     "test": "standard --fix"
