--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "anydo",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Unofficial Any.do client for Node.js.",
   "main": "index.js",
   "scripts": {
     "test": "standard --fix"
   },
-  "keywords": [],
+  "keywords": [
+    "anydo",
+    "any.do",
+    "todo",
+    "todos",
+    "api",
+    "client",
+    "unofficial"
+  ],
   "author": "Mark Tiedemann <www.marktiedemann@gmail.com>",
   "license": "WTFPL",
   "devDependencies": {
